studi-kasus-2/K8S/twittor-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: twittorservice-dpl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: twittorservice
  template:
    metadata:
      labels:
        app: twittorservice
    spec:
      containers:
      - name: twittorservice
        image: rahmatalhakam/twittorservice:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "100m"
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: twittor-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: twittorservice
  ports:
  - name: twittorservice
    protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: twittorservice-srv
spec:
  type: NodePort
  selector:
    app: twittorservice
  ports:
  - name: twittorservice
    protocol: TCP
    port: 80
    targetPort: 80
