studi-kasus-2/K8S/twittorlog-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: twittorlog-dpl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: twittorlog
  template:
    metadata:
      labels:
        app: twittorlog
    spec:
      containers:
      - name: twittorlog
        image: rahmatalhakam/twittorlog:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "100m"
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: twittorlog-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: twittorlog
  ports:
  - name: twittorlog
    protocol: TCP
    port: 80
    targetPort: 80
